--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -679,12 +679,6 @@
   number = {5}
 }
 
-@online{CanopyStructureTopography,
-  title = {Canopy Structure and Topography Jointly Constrain the Microclimate of Human‐modified Tropical Landscapes - {{Jucker}} - 2018 - {{Global Change Biology}} - {{Wiley Online Library}}},
-  url = {https://onlinelibrary.wiley.com/doi/full/10.1111/gcb.14415},
-  urldate = {2021-04-06}
-}
-
 @article{caoLeafAnatomyChlorophyll2000,
   title = {Leaf Anatomy and Chlorophyll Content of 12 Woody Species in Contrasting Light Conditions in a {{Bornean}} Heath Forest},
   author = {Cao, Kun-Fang},
@@ -1150,7 +1144,7 @@
   number = {2}
 }
 
-@article{conditQuantifyingDeciduousnessTropical2000b,
+@article{conditQuantifyingDeciduousnessTropical2000c,
   title = {Quantifying the Deciduousness of Tropical Forest Canopies under Varying Climates},
   author = {Condit, Richard and Watts, Kristina and Bohlman, Stephanie A. and Pérez, Rolando and Foster, Robin B. and Hubbell, Stephen P.},
   date = {2000-10},
@@ -1434,24 +1428,6 @@
   number = {12}
 }
 
-@article{diffenbaughVerificationExtremeEvent2020a,
-  title = {Verification of Extreme Event Attribution: {{Using}} out-of-Sample Observations to Assess Changes in Probabilities of Unprecedented Events},
-  shorttitle = {Verification of Extreme Event Attribution},
-  author = {Diffenbaugh, Noah S.},
-  date = {2020-03},
-  journaltitle = {Sci. Adv.},
-  volume = {6},
-  pages = {eaay2368},
-  issn = {2375-2548},
-  doi = {10.1126/sciadv.aay2368},
-  url = {https://advances.sciencemag.org/lookup/doi/10.1126/sciadv.aay2368},
-  urldate = {2021-02-23},
-  abstract = {Independent verification of anthropogenic influence on specific extreme climate events remains elusive. This study presents a framework for such verification. This framework reveals that previously published results based on a 1961–2005 attribution period frequently underestimate the influence of global warming on the probability of unprecedented extremes during the 2006–2017 period. This underestimation is particularly pronounced for hot and wet events, with greater uncertainty for dry events. The underestimation is reflected in discrepancies between probabilities predicted during the attribution period and frequencies observed during the out-of-sample verification period. These discrepancies are most explained by increases in climate forcing between the attribution and verification periods, suggesting that 21st-century global warming has substantially increased the probability of unprecedented hot and wet events. Hence, the use of temporally lagged periods for attribution—and, more broadly, for extreme event probability quantification—can cause underestimation of historical impacts, and current and future risks.},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\78ERID7N\\Diffenbaugh - 2020 - Verification of extreme event attribution Using o.pdf},
-  langid = {english},
-  number = {12}
-}
-
 @article{doEnvironmentalInfluenceCanopy2005,
   title = {Environmental Influence on Canopy Phenology in the Dry Tropics},
   author = {Do, Frederic C. and Goudiaby, Venceslas A. and Gimenez, Olivier and Diagne, Amadou L. and Diouf, Mayecor and Rocheteau, Alain and Akpo, Leonard E.},
@@ -1565,7 +1541,7 @@
   number = {3}
 }
 
-@article{duqueThermophilizationAdultJuvenile2015a,
+@article{duqueThermophilizationAdultJuvenile2015,
   title = {Thermophilization of Adult and Juvenile Tree Communities in the Northern Tropical {{Andes}}},
   author = {Duque, Alvaro and Stevenson, Pablo R. and Feeley, Kenneth J.},
   date = {2015-08-25},
@@ -2104,13 +2080,6 @@
   keywords = {Biosphere 2,carbohydrates,nitrogen,Populus deltoides (cottonwood),Q10,respiration,scaling,temperature},
   langid = {english},
   number = {3}
-}
-
-@online{GrowthResponseClimate,
-  title = {Growth Response to Climate and Drought in {{Pinus}} Nigra {{Arn}}. Trees of Different Crown Classes | {{SpringerLink}}},
-  url = {https://link-springer-com.smithsonian.idm.oclc.org/article/10.1007/s00468-007-0191-6},
-  urldate = {2020-08-02},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\VGPEXJNZ\\s00468-007-0191-6.html}
 }
 
 @online{GsglobalLeafgasexchangeBitbucket,
@@ -2966,23 +2935,6 @@
   langid = {english}
 }
 
-@article{kochDiurnalPatternsLeaf1994,
-  title = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}: Measurements from the {{Radeau}} Des {{Cimes}}},
-  shorttitle = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}},
-  author = {Koch, George W. and Amthor, Jeffrey S. and Goulden, Michael L.},
-  date = {1994-04-01},
-  journaltitle = {Tree Physiology},
-  volume = {14},
-  pages = {347--360},
-  issn = {0829-318X},
-  doi = {10.1093/treephys/14.4.347},
-  url = {https://doi.org/10.1093/treephys/14.4.347},
-  urldate = {2021-04-13},
-  abstract = {Diurnal patterns of leaf conductance, net photosynthesis and water potential of five tree species were measured at the top of the canopy in a tropical lowland rain forest in southwestern Cameroon. Access to the 40 m canopy was by a large canopy-supported raft, the Radeau des Cimes. The measurements were made under ambient conditions, but the raft altered the local energy balance at times, resulting in elevated leaf temperatures. Leaf water potential was equal to or greater than the gravitational potential at 40 m in the early morning, falling to values as low as –3.0 MPa near midday. Net photosynthesis and conductance were typically highest during midmorning, with values of about 10–12 μmol CO2 m−2 s−1 and 0.2–0.3 mol H2O m−2 s−1, respectively. Leaf conductance and net photosynthesis commonly declined through midday with occasional recovery late in the day. Photosynthesis was negatively related to leaf temperature above midday air temperature maxima. These patterns were similar to those observed in other seasonally droughted evergreen communities, such as Mediterranean-climate shrubs, and indicate that environmental factors may cause stomatal closure and limit photosynthesis in tropical rain forests during the midday period.},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\NBSEPJT6\\Koch et al. - 1994 - Diurnal patterns of leaf photosynthesis, conductan.pdf},
-  number = {4}
-}
-
 @article{kochDiurnalPatternsLeaf1994b,
   title = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}: Measurements from the {{Radeau}} Des {{Cimes}}},
   shorttitle = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}},
@@ -3774,24 +3726,6 @@
   langid = {english}
 }
 
-@article{liVariationLeafChlorophyll2018a,
-  title = {Variation in Leaf Chlorophyll Concentration from Tropical to Cold-Temperate Forests: {{Association}} with Gross Primary Productivity},
-  shorttitle = {Variation in Leaf Chlorophyll Concentration from Tropical to Cold-Temperate Forests},
-  author = {Li, Ying and Liu, Congcong and Zhang, Jiahui and Yang, Hao and Xu, Li and Wang, Qiufeng and Sack, Lawren and Wu, Xiuqin and Hou, Jihua and He, Nianpeng},
-  date = {2018-02-01},
-  journaltitle = {Ecological Indicators},
-  volume = {85},
-  pages = {383--389},
-  issn = {1470-160X},
-  doi = {10.1016/j.ecolind.2017.10.025},
-  url = {http://www.sciencedirect.com/science/article/pii/S1470160X17306635},
-  urldate = {2020-12-31},
-  abstract = {Leaf chlorophyll is essential to harvest light energy to drive photosynthesis. Yet, most of studies of leaf chlorophyll concentration (Chl) have typically been limited to few species or sites, and there has been little understanding of its variation among species of contrasting environments, or across forests differing in gross primary productivity (GPP). We measured mass-based foliar Chl concentrations (Chl a, Chl b, and total Chl) for 937 species of nine Chinese forests ranging from tropical to cold-temperate regions. Total Chl varied by over ten-fold from 1.45 to 19.2mgg−1 (mean: 5.54mgg−1), and differed among plant functional groups. At the community level, total Chl decreased with increasing latitude. The ratio of Chl a/b decreased from trees to shrubs to herbs, consistent with adaptation to contrasting irradiance, i.e., overstory vs. understory. Total Chl was positively related to leaf N and P concentrations, as would be expected to optimize photosynthesis and carbon fixation. Across forests, GPP was positively correlated with community-averaged Chl (r=0.57; P{$<$}0.01), a new case of a linkage between leaf traits and ecosystem function at regional to continental scale. Our findings revealed variation in Chl from tropical to cold-temperate forests, and the linkage of leaf Chl with ecosystem function, enhancing our ability to parameterize vegetation models.},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\IW7SKDWU\\S1470160X17306635.html;C\:\\Users\\Me\\Zotero\\storage\\UDWV57KI\\S1470160X17306635.html},
-  keywords = {Chl,Chlorophyll,Community,Forest,Functional traits,GPP,Nutrients,Photosynthesis,Pigments,Spatial variation,Trait},
-  langid = {english}
-}
-
 @article{liVariationLeafChlorophyll2018b,
   title = {Variation in Leaf Chlorophyll Concentration from Tropical to Cold-Temperate Forests: {{Association}} with Gross Primary Productivity},
   shorttitle = {Variation in Leaf Chlorophyll Concentration from Tropical to Cold-Temperate Forests},
@@ -4468,25 +4402,6 @@
   url = {http://www.nature.com/articles/nplants2016129},
   urldate = {2020-07-17},
   file = {C\:\\Users\\Me\\Zotero\\storage\\R9V64PHN\\Michealtz et al. 2016.pdf},
-  langid = {english},
-  number = {9}
-}
-
-@article{michaletzEnergeticCarbonEconomic2016a,
-  title = {The Energetic and Carbon Economic Origins of Leaf Thermoregulation},
-  author = {Michaletz, Sean T. and Weiser, Michael D. and McDowell, Nate G. and Zhou, Jizhong and Kaspari, Michael and Helliker, Brent R. and Enquist, Brian J.},
-  date = {2016-08-22},
-  journaltitle = {Nature Plants},
-  volume = {2},
-  pages = {1--9},
-  publisher = {{Nature Publishing Group}},
-  issn = {2055-0278},
-  doi = {10.1038/nplants.2016.129},
-  url = {http://www.nature.com/articles/nplants2016129},
-  urldate = {2021-04-14},
-  abstract = {Leaf thermoregulation has been documented in a handful of studies, but the generality and origins of this pattern are unclear. We suggest that leaf thermoregulation is widespread in both space and time, and originates from the optimization of leaf traits to maximize leaf carbon gain across and within variable environments. Here we use global data for leaf temperatures, traits and photosynthesis to evaluate predictions from a novel theory of thermoregulation that synthesizes energy budget and carbon economics theories. Our results reveal that variation in leaf temperatures and physiological performance are tightly linked to leaf traits and carbon economics. The theory, parameterized with global averaged leaf traits and microclimate, predicts a moderate level of leaf thermoregulation across a broad air temperature gradient. These predictions are supported by independent data for diverse taxa spanning a global air temperature range of ∼60\,°C. Moreover, our theory predicts that net carbon assimilation can be maximized by means of a trade-off between leaf thermal stability and photosynthetic stability. This prediction is supported by globally distributed data for leaf thermal and photosynthetic traits. Our results demonstrate that the temperatures of plant tissues, and not just air, are vital to developing more accurate Earth system models.},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\X7M8FL22\\nplants2016129.html},
-  issue = {9},
   langid = {english},
   number = {9}
 }
@@ -5294,6 +5209,22 @@
   abstract = {Increasing air temperature is expected to extend growing season length in temperate, broadleaf forests, leading to potential increases in evapotranspiration and net carbon uptake. However, other key processes affecting water and carbon cycles are also highly temperature-dependent. Warmer temperatures may result in higher ecosystem carbon loss through respiration and higher potential evapotranspiration through increased atmospheric demand for water. Thus, the net effects of a warming planet are uncertain and highly dependent on local climate and vegetation. We analyzed five years of data from the Coweeta eddy covariance tower in the southern Appalachian Mountains of western North Carolina, USA, a highly productive region that has historically been underrepresented in flux observation networks. We examined how leaf phenology and climate affect water and carbon cycling in a mature forest in one of the wettest biomes in North America. Warm temperatures in early 2012 caused leaf-out to occur two weeks earlier than in cooler years and led to higher seasonal carbon uptake. However, these warmer temperatures also drove higher winter ecosystem respiration, offsetting much of the springtime carbon gain. Interannual variability in net carbon uptake was high (147 to 364 g C m−2 y−1), but unrelated to growing season length. Instead, years with warmer growing seasons had 10\% higher respiration and sequestered ∼40\% less carbon than cooler years. In contrast, annual evapotranspiration was relatively consistent among years (coefficient of variation = 4\%) despite large differences in precipitation (17\%, range = 800 mm). Transpiration by the evergreen understory likely helped to compensate for phenologically-driven differences in canopy transpiration. The increasing frequency of high summer temperatures is expected to have a greater effect on respiration than growing season length, reducing forest carbon storage.},
   file = {C\:\\Users\\Me\\Zotero\\storage\\K45KARK2\\Oishi et al. - 2018 - Warmer temperatures reduce net carbon uptake, but .pdf;C\:\\Users\\Me\\Zotero\\storage\\MX5QBCUT\\S016819231830011X.html},
   keywords = {Complex terrain,Drought,Ecosystem respiration,Gross primary productivity,Net ecosystem exchange,Net ecosystem productivity},
+  langid = {english}
+}
+
+@article{oishiWarmerTemperaturesReduce2018a,
+  title = {Warmer Temperatures Reduce Net Carbon Uptake, but Do Not Affect Water Use, in a Mature Southern {{Appalachian}} Forest},
+  author = {Oishi, A. Christopher and Miniat, Chelcy F. and Novick, Kimberly A. and Brantley, Steven T. and Vose, James M. and Walker, John T.},
+  date = {2018-04},
+  journaltitle = {Agricultural and Forest Meteorology},
+  volume = {252},
+  pages = {269--282},
+  issn = {01681923},
+  doi = {10.1016/j.agrformet.2018.01.011},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S016819231830011X},
+  urldate = {2021-05-04},
+  abstract = {Increasing air temperature is expected to extend growing season length in temperate, broadleaf forests, leading to potential increases in evapotranspiration and net carbon uptake. However, other key processes affecting water and carbon cycles are also highly temperature-dependent. Warmer temperatures may result in higher ecosystem carbon loss through respiration and higher potential evapotranspiration through increased atmospheric demand for water. Thus, the net effects of a warming planet are uncertain and highly dependent on local climate and vegetation. We analyzed five years of data from the Coweeta eddy covariance tower in the southern Appalachian Mountains of western North Carolina, USA, a highly productive region that has historically been underrepresented in flux observation networks. We examined how leaf phenology and climate affect water and carbon cycling in a mature forest in one of the wettest biomes in North America. Warm temperatures in early 2012 caused leaf-out to occur two weeks earlier than in cooler years and led to higher seasonal carbon uptake. However, these warmer temperatures also drove higher winter ecosystem respiration, offsetting much of the springtime carbon gain. Interannual variability in net carbon uptake was high (147 to 364 g C m−2 y−1), but unrelated to growing season length. Instead, years with warmer growing seasons had 10\% higher respiration and sequestered ∼40\% less carbon than cooler years. In contrast, annual evapotranspiration was relatively consistent among years (coefficient of variation = 4\%) despite large differences in precipitation (17\%, range = 800 mm). Transpiration by the evergreen understory likely helped to compensate for phenologicallydriven differences in canopy transpiration. The increasing frequency of high summer temperatures is expected to have a greater effect on respiration than growing season length, reducing forest carbon storage.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\9U3XUTWU\\Oishi et al. - 2018 - Warmer temperatures reduce net carbon uptake, but .pdf},
   langid = {english}
 }
 
@@ -8505,26 +8436,6 @@
   urldate = {2020-07-17},
   abstract = {Climate warming is causing a shift in biological communities in favor of warm-affinity species (i.e., thermophilization). Species responses often lag behind climate warming, but the reasons for such lags remain largely unknown. Here, we analyzed multidecadal understory microclimate dynamics in European forests and show that thermophilization and the climatic lag in forest plant communities are primarily controlled by microclimate. Increasing tree canopy cover reduces warming rates inside forests, but loss of canopy cover leads to increased local heat that exacerbates the disequilibrium between community responses and climate change. Reciprocal effects between plants and microclimates are key to understanding the response of forest biodiversity and functioning to climate and land-use changes.},
   file = {C\:\\Users\\Me\\Zotero\\storage\\2D38MB76\\Zellweger et al. - 2020 - Forest microclimate dynamics drive plant responses.pdf},
-  langid = {english},
-  number = {6492}
-}
-
-@article{zellwegerForestMicroclimateDynamics2020b,
-  title = {Forest Microclimate Dynamics Drive Plant Responses to Warming},
-  author = {Zellweger, Florian and Frenne, Pieter De and Lenoir, Jonathan and Vangansbeke, Pieter and Verheyen, Kris and Bernhardt-Römermann, Markus and Baeten, Lander and Hédl, Radim and Berki, Imre and Brunet, Jörg and Calster, Hans Van and Chudomelová, Markéta and Decocq, Guillaume and Dirnböck, Thomas and Durak, Tomasz and Heinken, Thilo and Jaroszewicz, Bogdan and Kopecký, Martin and Máliš, František and Macek, Martin and Malicki, Marek and Naaf, Tobias and Nagel, Thomas A. and Ortmann-Ajkai, Adrienne and Petřík, Petr and Pielech, Remigiusz and Reczyńska, Kamila and Schmidt, Wolfgang and Standovár, Tibor and Świerkosz, Krzysztof and Teleki, Balázs and Vild, Ondřej and Wulf, Monika and Coomes, David},
-  date = {2020-05-15},
-  journaltitle = {Science},
-  volume = {368},
-  pages = {772--775},
-  publisher = {{American Association for the Advancement of Science}},
-  issn = {0036-8075, 1095-9203},
-  doi = {10.1126/science.aba6880},
-  url = {https://science.sciencemag.org/content/368/6492/772},
-  urldate = {2020-12-10},
-  abstract = {Local factors restrain forest warming Microclimates are key to understanding how organisms and ecosystems respond to macroclimate change, yet they are frequently neglected when studying biotic responses to global change. Zellweger et al. provide a long-term, continental-scale assessment of the effects of micro- and macroclimate on the community composition of European forests (see the Perspective by Lembrechts and Nijs). They show that changes in forest canopy cover are fundamentally important for driving community responses to climate change. Closed canopies buffer against the effects of macroclimatic change through their cooling effect, slowing shifts in community composition, whereas open canopies tend to accelerate community change through local heating effects. Science, this issue p. 772; see also p. 711 Climate warming is causing a shift in biological communities in favor of warm-affinity species (i.e., thermophilization). Species responses often lag behind climate warming, but the reasons for such lags remain largely unknown. Here, we analyzed multidecadal understory microclimate dynamics in European forests and show that thermophilization and the climatic lag in forest plant communities are primarily controlled by microclimate. Increasing tree canopy cover reduces warming rates inside forests, but loss of canopy cover leads to increased local heat that exacerbates the disequilibrium between community responses and climate change. Reciprocal effects between plants and microclimates are key to understanding the response of forest biodiversity and functioning to climate and land-use changes. The cooling effect of tree canopies can protect forests from biodiversity loss in times of climate warming. The cooling effect of tree canopies can protect forests from biodiversity loss in times of climate warming.},
-  eprint = {32409476},
-  eprinttype = {pmid},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\CFFQNVHP\\Zellweger et al. - 2020 - Forest microclimate dynamics drive plant responses.pdf},
   langid = {english},
   number = {6492}
 }
