--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -6721,6 +6721,24 @@
   number = {4}
 }
 
+@article{seiwaChangesLeafPhenology1999a,
+  title = {Changes in {{Leaf Phenology}} Are {{Dependent}} on {{Tree Height inAcer}} Mono, a {{Deciduous Broad}}-Leaved {{Tree}}},
+  author = {Seiwa, KENJI},
+  date = {1999-04-01},
+  journaltitle = {Annals of Botany},
+  volume = {83},
+  pages = {355--361},
+  issn = {0305-7364},
+  doi = {10.1006/anbo.1998.0831},
+  url = {https://www.sciencedirect.com/science/article/pii/S0305736498908319},
+  urldate = {2021-05-05},
+  abstract = {Ontogenetic changes in leaf phenology of a hardwood tree,Acer mono, were investigated in individuals in different size classes in a temperate forest. Leaf emergence was earliest in current-year seedlings, and was increasingly delayed with increasing height of the individual. The shorter the tree, the longer the duration of leaf emergence. Timing of leaf emergence of the dominant heterospecific canopy trees was almost identical to that of conspecific adults; understorey light then gradually decreased with expansion of canopy leaves. These traits indicate that smaller individuals that receive the least light in summer can acquire favourable light for a longer period in spring than taller plants even in a forest understorey, but the advantage decreases with increasing plant height. Changes in the duration of leaf emergence and leaf longevity in response to environmental light regime [sun (forest edge)vs. shade (forest understorey)], were greatest for current year seedlings but decreased with increasing plant height. These results suggest that the plastic response of leaf phenology in juvenile stages may reduce the risk of losing an entire cohort in spatially heterogenous environments in the understorey of temperate forests.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\8KJD9BAC\\Seiwa - 1999 - Changes in Leaf Phenology are Dependent on Tree He.pdf;C\:\\Users\\Me\\Zotero\\storage\\LLC3Q8XL\\S0305736498908319.html},
+  keywords = {deciduous broad-leaved tree,duration of leaf emergence,forest understorey,leaf longevity,leaf phenology,light capture,Maxim.,ontogeny,plasticity,timing of leaf emergence,tree height.},
+  langid = {english},
+  number = {4}
+}
+
 @article{sellinHumiditydrivenChangesGrowth2013,
   title = {Humidity-Driven Changes in Growth Rate, Photosynthetic Capacity, Hydraulic Properties and Other Functional Traits in Silver Birch ({{Betula}} Pendula)},
   author = {Sellin, Arne and Tullus, Arvo and Niglas, Aigar and Õunapuu, Eele and Karusion, Annika and Lõhmus, Krista},
