--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -7900,6 +7900,25 @@
   number = {4}
 }
 
+@article{vitasseOntogenicChangesRather2013,
+  title = {Ontogenic Changes Rather than Difference in Temperature Cause Understory Trees to Leaf out Earlier},
+  author = {Vitasse, Yann},
+  date = {2013},
+  journaltitle = {New Phytologist},
+  volume = {198},
+  pages = {149--155},
+  issn = {1469-8137},
+  doi = {10.1111/nph.12130},
+  url = {http://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.12130},
+  urldate = {2021-05-05},
+  abstract = {In a temperate climate, understory trees leaf out earlier than canopy trees, but the cause of this discrepancy remains unclear. This study aims to investigate whether this discrepancy results from ontogenic changes or from microclimatic differences. Seedlings of five deciduous tree species were grown in spring 2012 in the understory and at canopy height using a 45-m-high construction crane built into a mature mixed forest in the foothills of the Swiss Jura Mountains. The leaf development of these seedlings, as well as conspecific adults, was compared, taking into account the corresponding microclimate. The date of leaf unfolding occurred 10–40 d earlier in seedlings grown at canopy level than in conspecific adults. Seedlings grown in the understory flushed c. 6 d later than those grown at canopy height, which can be attributed to the warmer temperatures recorded at canopy height (c. 1°C warmer). This study demonstrates that later leaf emergence of canopy trees compared with understory trees results from ontogenic changes and not from the vertical thermal profile that exists within forests. This study warns against the assumption that phenological data obtained in warming and photoperiod experiments on juvenile trees can be used for the prediction of forest response to climate warming.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.12130},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\AMW6R62P\\Vitasse - 2013 - Ontogenic changes rather than difference in temper.pdf;C\:\\Users\\Me\\Zotero\\storage\\EW7WBZRU\\nph.html},
+  keywords = {canopy closure,canopy tree,forest overstory,forest understory,leaf unfolding,ontogenic changes,phenology,vertical temperature gradient},
+  langid = {english},
+  number = {1}
+}
+
 @article{vogelConvectiveCoolingLow1970,
   title = {Convective {{Cooling}} at {{Low Airspeeds}} and the {{Shapes}} of {{Broad Leaves}}},
   author = {VOGEL, STEVEN},
