--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -246,8 +246,7 @@ Especially in closed-canopy forests with increased buffering capacity, large lea
 In three forest types- US temperate deciduous, Puerto Rico tropical wet and tropical moist, $T_{leaf_{max}}$ exceeded temperature optimum for photosynthesis $T_{opt}$ in the upper canopies of all three forests, with increasing $T_{leaf}$ - $T_{air}$  with height. $T_{leaf}$ - $T_{air}$ was observed to be greatest in temperate deciduous forest compared to tropical moist and wet. Greater light input in exposed upper canopy leaves can sometimes elevate leaf temperature $1-7{^\circ}C$ above air temperature, making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [@doughtyAreTropicalForests2008; @mauTemperateTropicalForest2018a] 
 
 **Stability of $T_{leaf}$ varies with fluctuation in biophysical conditions**
-Biophysical environment fluctuation dictates how stable $T_{leaf}$ is, where stable biophysical conditions, for eg. low wind speed and consistent $T_{air}$ can prolong $T_{leaf}$, consistently reducing stomatal conductance and photosynthesis while increasing $T_{leaf}$, and therefore reducing chances for leaf recovery. However, increase in biophysical fluctuations make $T_{leaf}$ unstable as seen in upper canopies where with available water unstable $T_{leaf}$ can be more manageable to peak irradiance and $T_{air}$ than in stable buffered canopy regions [**REF**]  
-
+Biophysical environment fluctuation dictates how stable $T_{leaf}$ is, where stable biophysical conditions, for eg. low wind speed and consistent $T_{air}$ can prolong $T_{leaf}$, consistently reducing stomatal conductance and photosynthesis while increasing $T_{leaf}$, and therefore reducing chances for leaf recovery. However, increase in biophysical fluctuations, for eg. wind speed, cloud mediated irradiance fluctuation and $T_{air}$  make $T_{leaf}$ unstable as seen in upper canopies where with available water unstable $T_{leaf}$ can be more manageable at peak irradiance and $T_{air}$ than in stable buffered canopy regions [**REF**] ~this understanding needs more help from co-authors, should this be included? (thermal time constant?)~ 
 
 ## Leaf traits 
 
@@ -319,13 +318,13 @@ Proportional to vertical light gradients at an intra- and inter-species level, s
 
 ##### *Deciduousness*
 
+Deciduousness as a leaf trait is an adaptation to water stress therefore can influence biophysical gradient and leaf temperature distribution during leaf-loss [@rey-sanchez_spatial_2016]. *Among species that can be deciduous, greater proportion of deciduous individuals in larger size classes that also tend to lose their leaves than understory species that are seldom deciduous in the tropics. Deciduous species are also more prominent in drier sites compared to wet sites [@conditQuantifyingDeciduousnessTropical2000b]* 
 
-*Among species that can be deciduous, greater proportion of deciduous individuals in larger size classes (Condit et al. 2000). *
-*Spring and fall leaf phenology in temperate deciduous forests (Augsburger).* 	
+*Spring and fall leaf phenology in temperate deciduous forests (Augsburger).* Leaf emergence in deciduous forests is increasing delayed with height-ontogeny where understory species leaf-out earlier than canopy trees [Vitasse et al. 2013; @seiwaChangesLeafPhenology1999]. 
 
 ### Interspecific varaiation 
 
-Across tree-size ontogeny, canopy and understory trees of same species in tropical, temperate, and conifer forests show fundamental light adapted leaf traits in their biophysical environment, as observed and similar to within-species gradient [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Isolating ontogeny, under constant light conditions of open-grown canopy and understory trees, for example in large gaps, differences in traits showed significantly greater LMA, photosynthetic capcity per area, and stomatal conductance in taller canopy trees compared to saplings [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Across  multi-species canopy and understory, while fundamental adaptations to light and water are observed, their pasticity to light differs along with inherent traits such as leaf shape, size and width, stomtal conductance levels and therefore influence leaf temperatures.As a result, some species might be more susceptible to heat stress at a vertical gradient than others [@fauset_differences_2018]. 
+Across tree-size ontogeny, canopy and understory trees of same species in tropical, temperate, and conifer forests show fundamental light adapted leaf traits in their biophysical environment, as observed and similar to within-species gradient [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Isolating ontogeny, under constant light conditions of open-grown canopy and understory trees, for example in large gaps, differences in traits show significantly greater LMA, photosynthetic capcity per area, and stomatal conductance in taller canopy trees compared to saplings [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Across  multi-species canopy and understory, while fundamental adaptations to light and water are observed, their pasticity to light differs along with inherent traits such as leaf shape, size and width, stomtal conductance levels and therefore influence leaf temperatures.As a result, some species might be more susceptible to heat stress at a vertical gradient than others [@fauset_differences_2018]. 
 
 *from Martijn in Tleaves figure: One thing that might be more relevant in tropical than in seasonal temperate forests, is the issue I mentioned before about the difference between shade leaves of canopy trees and leaves of understory species. The understory species in the tropics (the ones that won't necessarily make it to the canopy, and can reproduce in the understory) appear to invest more in leaf longevity than in light harvesting per se, so even though they are in the shade, they do not have large leaves with low LMA. This would be a deviation on, or a special case of, the understory parameters you are using now. I don't think we necessarily need to incorporate that in this figure, but I think it would be useful to be able to say that for understory species with small, high LMA leaves the effects of windspeed, radiation, RH, etc, are greater/smaller than for the understory species parameters in the figure. DOes this make sense? Is this relevant at all for seasonal forests? The only thing that comes to mind is Ilex, but maybe there are other species?*
 
