--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -518,10 +518,7 @@ Still, as models increase in complexity, model developments and improvements hav
 **The findings of this review reinforce the notion that representing vertical structuring is essential to capturing forest dynamics under global change.**
 *[how?]*
 
-~~In general, DGVMs range from Individual Based Models (IBMs) on one end of the complexity and scale spectrum to big-leaf models on the other end. Most climate models incorporate vegetation dynamics using big-leaf models, which include many first generation DGVMs that reduce 3D vegetation structure across the entire biosphere into a single vegetation layer. This simplification results in greater computational efficiency and thus easier integration into ESMs (Arora & Boer, 2010; Bonan et al. 2003; Cox, 2001; Krinner et al., 2005), although it comes at a cost of a lack of representation of important demographic processes, canopy gap formation, vertical light competition, competitive exclusion, and successional recovery from disturbance (Feeley et al., 2007; Hurtt et al. 1998; Moorcroft et al., 2001; Smith et al. 2001; Stark et al., 2012). On the other end of the spectrum are IBMs, also referred to as forest gap models, representing vegetation at the level of individual plants (Christoffersen et al., 2016; Fischer et al., 2016; Fyllas et al., 2014; Sato et al. 2007; Shuman et al. 2014; Smith et al., 2001; Bugmann, 2001; Dietze & Latimer, 2011). These models are often stochastic and spatially explicit, capturing spatial variability in the light environment and microclimates at high vertical and horizontal resolution. As a result, however, IBMs are computationally expensive and tend to be run at very local scales.~~ 
-
-**The computationally feasible approach to representing vertical structuring in DVGMs lies in Cohort-based models (CBMs), which sit in the middle of this continuum between the oversimplified vegetation dynamics in big-leaf models and the computational expense of individual-based models.** CBMs represent vegetation as cohorts of individual plants, grouped together based on properties including size, age, and functional type (Haverd et al., 2013; Hurtt et al., 1998; Lischke et al. 2006; Medvigy et al. 2009; Moorcroft et al., 2001; Scherstjanoi et al. 2014; Smith et al., 2014; Weng et al., 2015). ~~Although this cohort approach serves as a compromise that incurs lower computational costs than IBMs while capturing many of the same dynamics, CBMs do not incorporate the stochastic processes of IBMs that typically allow for greater representation of functional diversity (Fisher et al., 2010).~~ 
-
+**The computationally feasible approach to representing vertical structuring in DVGMs lies in Cohort-based models (CBMs), which sit in the middle of this continuum between the oversimplified vegetation dynamics in big-leaf models and the computational expense of individual-based models.** CBMs represent vegetation as cohorts of individual plants, grouped together based on properties including size, age, and functional type (Haverd et al., 2013; Hurtt et al., 1998; Lischke et al. 2006; Medvigy et al. 2009; Moorcroft et al., 2001; Scherstjanoi et al. 2014; Smith et al., 2014; Weng et al., 2015). 
 *(KAT: I think all of the following content is great, but probably needs to be heavily tightened:)*
 
 To review the vertical light environment and thermodynamics of CBMs in more detail, we focus here on the Ecosystem Demography model version 2 (ED2), a model that is actively undergoing continued development and application across a range of ecosystems and landscapes (Moorcroft et al. 2001, Longo et al 2019 Pt 1 & pt 2). ED2 is also the progenitor of the Functionally Assembled Terrestrial Ecosystem Simulator (FATES), the DGVM coupled with the Energy Exascale Earth System Model (E3SM) (Xu & Christoffersen 2017 ) . In ED2, cohorts are tracked across multiple size-classes or individuals within the same plant functional type (PFT). Each cohort can encounter multiple light environments within a single climatic grid cell depending on patch-level disturbance history and vertical light competition that modulates interactions between plant traits and resource acquisition. Heterogeneity in the light environment and canopy structure across patches within a grid cell gives rise to varying horizontal and vertical micro-environments that differ in temperature, humidity, soil moisture, and soil nutrient conditions (Fisher et al 2018). The energy, water, and carbon dioxide cycles are solved separately for each patch in ED2, while fluxes and storage associated with individual plants are solved for each cohort within patches (Longo et al 2019). As a result, vegetation structure and functional distributions are emergent properties in the model that depend on plant functional traits and their interactions with abiotic environmental conditions. Each plant perceives a unique environment, including incident light, temperature, and vapor pressure deficit that varies across local scales in association with the horizontal and vertical position of each cohort relative to other cohorts, in addition to patch level differences in topographic and edaphic conditions. Coexistence of different vegetation types emerges from different environmental niches, either along a successional gradient of light availability or vertical position in the canopy (Moorcroft et al., 2001; Smith et al., 2001; Purves & Pacala, 2008).
