--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -326,30 +326,23 @@ In response to the greater light availability, sun leaves have traits allowing g
 
 Leaf temperature beyond photosynthetic optimum temperature declines photosynthesis due it's peaked response to temperature. Photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; @slotSituTemperatureResponse2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing leaf temperature (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (refs. e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). Heat stress at $40-60{^\circ}C$ can cause irreversible damage to photosystem [II] leading to leaf necrosis and eventually leaf death [Baker 2008; @feeley_thermal_2020]. Leaves in tropical upper canopies have shown to experience air temperatures well above $40-60{^\circ}C$ on a regular basis, if $T_{leaf}$ is not regulated through $gs$ or adapated, heat stress can loss of canopy leaves [**REF**] 
 
-*[thoughts: plasticity vs change in tree species composition through the canopy; differences in variability of microenvironments through the profile - highest lower down in canopy?; life history / investment strategies and hence, leaf life spans at leaves at the top vs bottom of the canopy]-- M N. Smith [agreed. Again the importance of differentiating between within-species and among species trait variation. Also; steepness of the vertical gradient in light and VPD. In very tall trees a gradient in water potential might cause a gradient in stomatal limitations of net photosynthesis]*
-
-
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
-Biophysically, we might expect that sun leaves should tend to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), as optimum temperature $T_{opt}$ for $J_{max}$ has shown to increase with irradiance of an upper canopy leaf compared to shaded lower canopy leaf [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent based on the limited number of field studies that have compared temperature sensitivity of photosynthesis in sun and shade leaves.
-For 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similar results were found for $T_{opt}$ of $V_{max}$ and $J_{max}$ of tropical sun and shade leaves [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], and across a vertical profile in tropical forests [@mau_temperate_2018; @millerOnlySunlitLeaves2021], and temperate trees [@mau_temperate_2018].
+Biophysically, we might expect that sun leaves should tend to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), based on evidence that optimum temperature $T_{opt}$ of $J_{max}$ increased with irradiance of an upper canopy leaf compared to shaded lower canopy leaf [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent based on the limited number of field studies that have compared temperature sensitivity of photosynthesis in sun and shade leaves.
+For 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020].Similar results were shown for $T_{opt}$ of $V_{max}$ and $J_{max}$ of tropical sun and shade leaves [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], and across a vertical gradient of tropical trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021], and temperate trees [@mau_temperate_2018].
 
 *If we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.*
-
-
-*(KAT: let's cut the portion on T50 down to one or at most two par:)*
-
 
 **Leaf thermal tolerance (Tcrit/ T50)**
 $T_{crit}$ is the temperature at which efficiency of photosystem II starts to decrease, based on chlorphyll a flourescence; and $T_{50}$ represents temperature at which the efficiency of photosystem II had decreased by 50% [Slot et al. 2020]. Leaf thermal thresholds strongly reflect species adaptation to their microenvironment rather than macroclimate conditions [@feeley_thermal_2020; Slot et al. 2020; Perez and Feely 2020a] and phylogeny [Slot et al. 2020; Perez and Feeley 2020a]. 
 
-Across forest species, typical values across latitude and climate are ~45-50$^\circ$C (O' sullivan et al. 2017). $T_{50}$ and $T_{crit}$ decreases with elevation, as seen in tropical forests in Panama and Columbia and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017] and varies with leaf traits [Sastry et al. 2018, @zhang_photosynthetic_2012; @slotLeafHeatTolerance2020]. Species with large leaves, and slow heating and cooling time [higher thermal time constant] showed greater $T_{crit}$. On the other hand, leaves of species with greater construction costs, observed through LMA, had greater $T_{50}$ compared to species with low LMA [@slotLeafHeatTolerance2020]. However, higher photosynthetic heat tolerance does not necessary increase the breadth of leaf thermal safety margins. Rather, in across species sun leaves, higher photosynthetic heat tolerance experienced higher maximum leaf temperatures, and showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had narrower breadth of thermal safety margins (difference between maximum leaf temperature and $T_{50}$) [@perezPhotosyntheticHeatTolerances2020]
+Typical $T_{50}$ values across latitude and climate are ~45-50$^\circ$C (O' sullivan et al. 2017). With elevation, $T_{50}$ and $T_{crit}$ decrease, as seen in tropical foress and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017], and vary with leaf traits [Sastry et al. 2018, @zhang_photosynthetic_2012; @slotLeafHeatTolerance2020]. Species with large leaves, and slow heating and cooling time [higher thermal time constant] showed greater $T_{crit}$. On the other hand, leaves of species with greater construction costs, greater LMA, had greater $T_{50}$ compared to species with low LMA [@slotLeafHeatTolerance2020]. However, higher photosynthetic heat tolerance does not necessary increase the breadth of leaf thermal safety margin. Rather, across species sun leaves, higher photosynthetic heat tolerance experienced higher maximum leaf temperatures, and showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had a narrower breadth of thermal safety margins (difference between maximum leaf temperature and $T_{50}$) [@perezPhotosyntheticHeatTolerances2020]
 
 **Thermal tolerance (e.g., $T_{50}$) varies with exposure, but there are no studies isolating effect of height.**
 Thermal tolerance $T_{crit}$ and $T_{50}$ have been predominantly measured on sun leaves; thus there remains limited information on leaves with varying light exposures and vertical height gradient. 
 
 For two of three species studied in a tropical moist forest in Panama, $T_{50}$ was slightly lower for shade than sun-exposed leaves, though the results weren't significant and both were measured near ground level [@slotPhotosyntheticHeatTolerance2019a]. In tall grass prarie gallery forest in Kansas, photosynthetic heat tolerance measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions had higher heat tolerance (by $2{^\circ}C$) than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species photosynthetic heat tolerance increased seasonally from June to August [Knapp et al. 1994]
 
-In other cases, leaf thermal tolerance reflects microclimatic stress along a vertical gradient. For *Acacia Papyrocarpa* (Benth.) trees in an arid region of southern Australia, higher composite climate stress and thus $T_{50}$ was observed in the lower north-facing canopy position compared to other canopy positions. Greater $T_{50}$ in lower north-position also correlated with longer leaf thermal time constants, along with with low-wind speed and greater canopy and air temperature [@curtis_intracanopy_2019]. 
+In other cases, leaf thermal tolerance reflects microclimatic stress along a vertical gradient. For *Acacia Papyrocarpa* (Benth.) trees in an arid region of southern Australia, higher composite climate stress and thus $T_{50}$ was observed in the lower north-facing canopy position compared to other canopy positions. Greater $T_{50}$ in lower north-position also correlated with longer leaf thermal time constants, low-wind speed, $T_{air} and greater canopy [@curtis_intracanopy_2019]. 
 
 We're not aware of any other studies on this."we may want to argue that we have no *a priori* reasons to expect thermal tolerance to scale with height per se (or do we?). I think it makes sense to expect variation with light exposure because of the associated differences in temperature you can expect the leaves to be exposed to, but height itself should not affect heat tolerance other than through associated traits perhaps"--Martijn Slot*
 
@@ -360,16 +353,15 @@ We're not aware of any other studies on this."we may want to argue that we have 
 
 While respiration tends to increase along the vertical gradient, with greater respiration in canopy leaves [@bolstad_foliar_1999; Weerasinghe et al.2014], temperature sensitivity of respiration--$Q_{10}$--shows conflicting findings with no definite trend.
 
-In two forests, north-eastern oak dominated-deciduous forest in the US and conifer-dominated temperate New Zealand rainforest, across species $Q_{10}$ was found to be greater in upper-canopy leaves than in lower-canopy leaves, where values differed between species [@turnbullScalingFoliarRespiration2003]. Similarly, in sweetgum (*Liquidambara styraciflua*), upper canopy sun leaves showed greater $Q_{10}$ than lower within-canopy shade leaves [@harleyEffectsLightTemperature1996]. However, in other feild studies, $Q_{10}$ didnot vary across species vertical profiles and light exposure such as in a lowland tropical Australian forest study [@weerasingheCanopyPositionAffects2014], and across temperate trees at Coweeta [@bolstad_foliar_1999] $Q_{10}$. At Coweeta, Q10 showed a variable pattern, with a slight tendency to increase down the canopy [@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). Combining reference respiration and $Q_{10}$, @bolstad_foliar_1999 found  a modest net decrease in R for understory leaves relative to canopy leaves as T increases (*see their Fig. 1*). @bolstad_foliar_1999 found evidence of acclimation, but there remained a declining trend of respiration with elevation.
+Where $Q_{10}$ is greater in exposed upper-canopy leaves than in shaded lower-canopy leaves in across species in north-eastern oak deciduous forest, conifer temperate rainforest and in *Liquidambara styraciflua* tree, with differing values between species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996] but in other feild studies $Q_{10}$ doesnot vary across species vertical profiles in a lowland tropical Australian forest study [@weerasingheCanopyPositionAffects2014], and across temperate trees at Coweeta, with a slight tendency to increase down the canopy relative to upper-canopy leaves as T increases (*see their Fig. 1*)[@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
 
-With temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum. Beyond this inflection point, fluxnet global data analysis shows that photosynthesis declines whereas respiration increases exponentially, therefore, moving from carbon sink to carbon source with increasing temperature, independent of water and irradiance [@duffyHowCloseAre2021]
+Additionally, a fluxnet global data analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021]
 
 ### VOC production
 
 **Isoprene production**
-- high emission rates occur in the mid-canopy, and even from very small statured trees and shrubs, at a site in the Brazilian Amazon (Taylor et al., in prep).
-- The high temperature carbon compensation point of sun leaves is higher in isoprene emitting species than in non-emitting species, so it is to be expected that other aspects of heat tolerance will be similarly affected by isoprenes (https://doi.org/10.1111/pce.13564).
--  Within species, isporene production scales with light/ T; however regardless of light, isoprene emission increases with T such as in understory shaded leaves?
+High emission rates occur in the mid-canopy, and even from very small statured trees and shrubs, at a site in the Brazilian Amazon (Taylor et al., in prep).
+The high temperature carbon compensation point of sun leaves is higher in isoprene emitting species than in non-emitting species, so it is to be expected that other aspects of heat tolerance will be similarly affected by isoprenes (https://doi.org/10.1111/pce.13564). Within species, isporene production scales with light/ T; however regardless of light, isoprene emission increases with T such as in understory shaded leaves?
 
 
 
@@ -383,12 +375,11 @@ Vertical gradients in the biophysical environment shape which plant strategies, 
 **Vertical gradients affect tree recruitment, growth and survival, and how these respond to climatic variation.**
 There are numerous demographic differences between understory and canopy trees, which have been linked to both the physical environment and plant traits (e.g., REFS), *and we will not review those here.* *(although maybe we should put one paragraph?)*
 
-More interesting in this context is how these shape differences in the climatic sensitivity of growth and mortality.
-Many observations of larger trees suffering more during drought (Bennett et al. 2015).
-One likely mechanism behind this pattern is that the crowns of larger trees exist higher in the vertical profile and therefore are exposed to higher evaporative demand and solar radiation [@mcgregor_tree_nodate].
-Although drought is primarily a hydraulic problem, lack of water --> lower gs --> higher leaf T, so leaves face tradeoffs of water loss vs potentially damaging leafT. 
+More interesting in this context is how these shape differences in the climatic sensitivity of growth and mortality. Biophysically, greater vapor pressure deficit, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests, as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [Oishi et al. 2016]. On the other hand, greater relative humidity can do the opposite, where it stifles evapotranspiration thereby increasing leaf temperatures, particularly in canopy tops where irradiance can have a greater effect [Fig.3;@perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. However, soil water loss in conditions of drought effect larger trees more than small trees in less than a few days. Primarily because, greater biophysical evaporative demand in the canopy cannot meet long-distance water transport from the ground due to limited soil moisture [Norway spruce study, bennett; @mcgregor_tree_nodate].
 
-On the basis of phenology, temperate understory  trees tend to leaf out earlier than canopy due to ontogenetic variation in tree size rather than biophysical conditions [Vitasse et al. 2013], and, increase in annual temperatures has shown to have implications on understory phenology, relative to canopy trees [Zohnner and Renner, 2019]. However, short-term May spring heat waves have shown to negetively impact partially-expanded canopy leaves by inducing leaf shedding and decreasing photosynthesis in reflushed leaves, more than in understory saplings that are buffered from such conditions [Filewood and Thomas, 2013].
+On the basis of phenology, because understory trees leaf out earlier than canopy due to ontogenetic variation in tree size [Vitasse et al. 2013], understory growth is more sensitive to annual warming than canopy - showing earlier spring onset and later autumn senescense, particularly in temperate deciduous forests [Zohnner and Renner, 2019]. However, late spring short-term heat waves negatively impact partially- expanded canopy leaves by inducing leaf shedding and decreasing photosynthesis in reflushed leaves, more than understory saplings that are buffered from such conditions [Filewood and Thomas, 2013].
+
+If we expect 'shade' plants to have a different heat sensitivity to climate change than sun leaves, the consequences of climate change for demography and species community composition of the forest will depend strongly on the category of shade plants being considered.
 
 **There is also recently emerging evidence that understory trees tend to exhibit greater growth declines with $T_{air}$ under mesic conditions.** 
 In eight forests across the northeast United States, growth rates of understory trees declined sharply at higher $T_{air}$ [Fig `r fig_treerings` **???**; @rollinsonClimateSensitivityUnderstory].
@@ -396,11 +387,10 @@ This pattern is initially counter-intuitive in that sun-exposed leaves can exper
 However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. `r fig_leaf_T`).
 It is also possible that higher temperatures reduce understorty tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. [Increase in humidity?]
 
-Additionally, increased exposure to light increases non structural carbon reserve (NSC), plant height, foliage robustness,  while also increasing evapotranspiration, decreasing hydraulic conductivity, increasing chances of photoinhibition in leaves should water availability become limited, however with available water overall sensitivity to stress decreases. Understory shaded/younger trees have comparatively less NSC reserve due to light limitation as a primary stressor [which differs among shade-tolerant/intolerant], decreased plant biomass, increased leaf biomass, and decreased evapotranpiration demands, as well as greater investment in light harvesting than in photosynthesis--with greater overall sensitivity to stress and reduced tolerance. Larger NSC reserves in trees with greater light and water availability allows them to tolerate greater number of stressors compared to understory/younger trees that are able to tolerate only a fewer stressors making them overall more sensitive to stress [such as temperature]. Thus, overall stress sensitivity decreases and tolerance increases with increasing height, light and age.[@niinemetsResponsesForestTrees2010a]
+Additionally, interacting biophysical and biological stressors show that stress sensitivity is greater in buffered small trees, and decreases where tolerance increases with height, light with available water.  Partly because large NSC reserves in taller trees due to available light allow them to tolerate greater number of stressors than buffered trees that are light and NSC limited [@niinemetsResponsesForestTrees2010a]
 
 *In this section we could perhaps also consider differences in biomass distribution between canopy trees an understory plants, and what that may mean for performance at high temperature. What I'm thinking is the temperature sensitivity of respiration that applies to leaves, stems, and roots, and even though thermal acclimation of leaf respiration is common, much less is known about acclimation of stem and root respiration, and incomplete acclimation still increases the respiration load at higher temperature. It is possible that an increased respiration load is more disadvantageous for understory plants because 1), I suspect that a greater fraction of their total biomass is life biomass that respires (as opposed dead heartwood in the stems of big trees), and 2), because they operate closer to their light compensation point, so if they lose more carbon in respiration, they would need  to make up for lost carbon in photosynthesis, but might lack sunlight to do so*
 
-Interaction between degrees of shade x ontogeny with rising temperature needs more scientific attention because a huge part of understory vegetation lies within variations of light and shade spatio-temporal gradient.
 
 ![**Figure `r fig_treerings`. DRAFT tree-rings figure. Current figure shows (a) drought responses as a function of height in a temperate broadleaf forest (SCBI), from McGregor et al. 2020; (b) responses to growing season temperature in eight New England forests, from Rollinson et al. 2020.  I'M NOT SURE THIS IS WHAT WE WANT, BUT I THINK SOME SORT OF TREE-RING FIGURE WOULD BE GOOD. [ISSUE # 29](https://github.com/EcoClimLab/vertical-thermal-review/issues/29).](tree_rings/tree_rings_draft.png)
 
@@ -432,18 +422,8 @@ Having established how physical conditions and biological form and function vary
 
 - Influence of increasing temperatures on species compositions and feedbacks to future forest microclimates and function?
 
+*While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020]. Understories experience a distinct set of pressures as microclimatic warming combines with conditions of limited light and related foliar traits, inter-species resource competition, and herbivory [@niinemetsResponsesForestTrees2010a; @bartholomewSmallTropicalForest2020]. Since temperature sensitivity is directly linked with plant metabolic processes and performance, even around 1 degree of warming can lead to changes in plant species composition and growth [@bertrandChangesPlantCommunity2011; @bertrandCommentForestMicroclimate2020]. Plant communities in forest microclimates are already undergoing thermophilization [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]. Tree-ring analysis in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. Additionally, warming and heat waves can alter canopy and understory phenology and forest photosynthesis [@zohnerOngoingSeasonallyUneven2019].*
 
-
-*Frequent drought-related hydraulic limitation in forests alters species thermoregulation [@sastry_leaf_2018], and also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to sensitivity of overstory trees to variability in water availability and precipitation [@rollinsonClimateSensitivityUnderstory 2020]. Larger trees suffer disproportionally greater hydraulic stress during drought [resulting in heat stressed canopy-leaves], which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to increase [@mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of soil water enables canopies with suitable foliar traits to remain cool through continuous evapotranspiration even during increasing air temperature, thereby buffering understory microclimates, unless relative humidity is so high as to reduce rate of evapotranspiration [@perezIncreasingHumidityThreatens2018].*
-
-*While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020]. Understories experience a distinct set of pressures as microclimatic warming combines with conditions of limited light and related foliar traits, inter-species resource competition, and herbivory [@niinemetsResponsesForestTrees2010a; @bartholomewSmallTropicalForest2020]. Since temperature sensitivity is directly linked with plant metabolic processes and performance, even around 1 degree of warming can lead to changes in plant species composition and growth [@bertrandChangesPlantCommunity2011; @bertrandCommentForestMicroclimate2020]. Plant communities in forest microclimates are already undergoing thermophilization [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]. Tree-ring analysis in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. In addition, understory growth phenology is more sensitive to warming than canopy-- showing earlier spring onset and later autumn senescense [@zohnerOngoingSeasonallyUneven2019].*
-
-*The capacity of buffering largely depends on canopy cover and water availability [@davis_microclimatic_2019], each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions [@senfCanopyMortalityHas2018a]. Increasing global temperatures can increase canopy leaf temperatures sometimes above ambient temperature when transpiration is low, leading to temperate and tropical forest canopies functioning beyond or close to their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. In wetter conditions, available water facilitates leaf transpiration through open stomata; however increased relative humidity in tropical regions indirectly caused by increased temperature reduces transpiration, leading to high leaf temperatures in the canopy [@tibbittsHumidityPlants1979; @perezIncreasingHumidityThreatens2018].*
-
-
- if we expect 'shade' plants to have a different sensitivity to climate change than sun leaves, the consequences of climate change for demography and species community composition of the forest will depend strongly on the category of shade plants being considered
- 
- 
 *Warming will disproportionately affect the less warm-adapted functional types within the forest canopy, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), as is observed with Andean thermophilization (death is faster than recruitment and growth). Differential mortality within the canopy structure will alter the profile of metabolism and hence emergent forest function. Such alteration to canopy structure may be detectable by lidar and thermal remote sensing. If we know how metabolism maps to the thermal profile, then the observed forest structural changes can inform prediction of forest function.*
  
 ### canopy disturbance
@@ -452,9 +432,10 @@ Having established how physical conditions and biological form and function vary
 
 *(there's a lot of literature on canopy disturbance impacts--tap into that in this section)*
 
-Microclimate warming has implications for forest regeneration [@vonarxSpatiotemporalEffectsForest2012a]. Temperature driven photosynthesis limitation is reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
+*The capacity of buffering largely depends on canopy cover and water availability [@davis_microclimatic_2019], each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions [@senfCanopyMortalityHas2018a].Frequent drought-related hydraulic limitation in forests alters species thermoregulation [@sastry_leaf_2018], and also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to sensitivity of overstory trees to variability in water availability and precipitation [@rollinsonClimateSensitivityUnderstory 2020]. With larger trees suffering disproportionally greater hydraulic stress during drought, can contribute to increasing larger tree mortality in forests around the world [@mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020], or increase in mortality of big trees (e.g. @senfCanopyMortalityHas2018a) would increase canopy roughnessare, also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020].*
+ 
+*Increasing global temperatures can increase canopy leaf temperatures sometimes above ambient temperature when transpiration is low, leading to temperate and tropical forest canopies functioning beyond or close to their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Open-forest might experience greater microclimate warming than forests, having implications for forest regeneration, particularly in high-altitude regions [@vonarxSpatiotemporalEffectsForest2012a]. Temperature driven photosynthesis limitation is reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.*
 
-increases in mortality of big trees (e.g. @senfCanopyMortalityHas2018a) would increase canopy roughness 
 
 ## Scaling across space and time 
 
